2008-05-11  Duncan Murdoch <murdoch@stats.uwo.ca>

	Added --internal-links option to print file of internal links:
	* makeinfo/makeinfo.c (OPT_INTERNAL_LINKS, long_options, main, usage):
        add command-line option.
	(convert_from_loaded_file): write the file.
	* makeinfo/html.c (internal_links_filename,
	internal_links_stream, escaped_anchor_name): new globals and fn.
	(add_escaped_anchor): call escaped_anchor_name.
	* makeinfo/html.h: declare them.
	* makeinfo/index.c (cm_printindex): write out indexed links.
	* makeinfo/toc.c (toc_add_entry, contents_update_html): write out
	TOC entries, use escaped_anchor_name rather than duplicating code.
        * doc/texinfo.txi (Invoking makeinfo): document it.

2008-05-18  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (split_entry): split at period-newline,
	too.  Report from Ulrich Mueller, 14 May 2008 06:59:35.

2008-05-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (HTML Xref Command Expansion): add @leq,
	@geq, @arrow, @textdegree Unicodes.  Suggestion from 
	Patrice Dumas, 15 May 2008 01:02:37.

2008-05-13  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/display.c (find_diff): New function.
	(display_node_text): When computing differences between old and
	new lines use character, not byte offsets.

2008-05-12  Karl Berry  <karl@gnu.org>

	* install-info.c (split_entry, add_missing_basenames,
	add_mission_descriptions, --name and --description parsing):
	use ". " to delimit the description from the node name,
	rather than just ".", since we want to support nodes and names
	containing "config.status".
	* doc/texinfo.txi (Menu Parts): mention need for ". ".
	(Invoking install-info): mention bzip2 and lzma checks.

2008-05-11  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (usage): give -l input samples as latex and texinfo,
	not LaTeX and Texinfo. 
	Report from Hilmar Preusse, 10 May 2008 15:03:23, Debian bug #472758.

	* install-info/tests/0051, 52: new tests for periods in item names.